# tabura

./: .gitignore  .goreleaser.yaml  .zenodo.json  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.md  go.mod  go.sum  package-lock.json  package.json  playwright.config.ts  playwright.e2e.ci.config.ts  playwright.e2e.config.ts  train_hotword_script_test.go  tsconfig.base.json
.tabura/: AGENTS.tabura.md  codex-mcp.toml
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: approval-execution-policy.md  architecture.md  artifact-kind-taxonomy.md  auxiliary-surfaces.md  boox-validation.md  codex-app-server-pivot.md  design-lineage.md  extension-platform-whitepaper.md  gesture-truth-table.md  helpy-recovery-issue-pack.md  interaction-grammar.md  interfaces.md  live-runtime-whitepaper.md  meeting-notes-privacy.md  meeting-partner-whitepaper.md  model-download-policy.md  native-clients-plan.md  native-clients.md  object-scoped-intent-ui.md  plugins.md  release-v0.0.1.md  release-v0.0.2.md  release-v0.0.3.md  release-v0.0.4.md  release-v0.0.5.md  release-v0.0.6.md  release-v0.0.7.md  release-v0.0.8.md  release-v0.0.9.md  release-v0.1.0.md  release-v0.1.1.md  release-v0.1.2.md  release-v0.1.3.md  release-v0.1.4.md  release-v0.1.5.md  release-v0.1.6.md  release-v0.1.7.md  release-v0.1.8.md  release-v0.1.9.md  release-v0.2.0.md  (+3 more)
scripts/: benchmark_qwen35_small.py  benchmark_sloppad_usecases.py  benchmark_slopshell_usecases.py  benchmark_tabura_usecases.py  build-sls.sh  (+64 more)
(+1248 files in other folders)
