[package]
name = "tabula-desktop"
version = "0.1.0"
description = "Tabula desktop monolith"
authors = ["Tabula"]
edition = "2021"

[lib]
name = "tabula_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "fast-rng", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
